# stm32h7-badapple

./: .clang-format  CMakeLists.txt  README.md  gcc-arm-none-eabi.cmake  probe-game.ioc  ser.py
Core/Inc/: LS027B7DH01.h  image.h  image2.h  luaCode.h  main.h
Core/Src/: LS027B7DH01.c  main.c  stm32h7xx_hal_msp.c
Libs/lua/: CMakeLists.txt
